--- a/locale/de_CH/madek.po
+++ b/locale/de_CH/madek.po
@@ -701,15 +701,12 @@ msgstr "Neues Set erstellen"
 msgid "Search for a set and add the selected content to it."
 msgstr "Suchen Sie ein Set und fügen Sie die ausgewählten Inhalte zu diesem hinzu."
 
-
-msgid "Sets that only partially contain the selected content"
-msgstr "Sets, zu denen die ausgewählten Inhalte nur teilweise hinzugefügt sind,"
-
-msgid "are highlighted."
-msgstr "werden farbig gekennzeichnet."
-
 msgid "Further sets were found. Please refine your search."
 msgstr "Es wurden noch weitere Sets gefunden. Bitte verfeinern Sie Ihre Suche."
 
 msgid "of"
 msgstr "von"
+
+msgid "Remove from clipboard"
+msgstr "Aus der Zwischenablage entfernen"
+
