--- a/locale/de_CH/madek.po
+++ b/locale/de_CH/madek.po
@@ -710,3 +710,6 @@ msgstr "von"
 msgid "Remove from clipboard"
 msgstr "Aus der Zwischenablage entfernen"
 
+msgid "Save the currently selected keywords and filters as a filter set."
+msgstr "Die aktuell eingestellten Suchbegriffe und Filter als Filterset speichern."
+
