--- a/locale/madek.pot
+++ b/locale/madek.pot
@@ -724,3 +724,54 @@ msgstr ""
 
 msgid "Selected content is only partially contained in this set."
 msgstr ""
+
+msgid "Order by creation date"
+msgstr ""
+
+msgid "page"
+msgstr ""
+
+msgid "No content"
+msgstr ""
+
+msgid "found for the current filter settings."
+msgstr ""
+
+msgid "No content found for this keyword."
+msgstr ""
+
+msgid "available"
+msgstr ""
+
+msgid "for the current filter settings."
+msgstr ""
+
+msgid "No metadata available for the context \"%s\""
+msgstr ""
+
+msgid "Delete forever"
+msgstr ""
+
+msgid "Delete item"
+msgstr ""
+
+msgid "Are you sure you want to delete the following:"
+msgstr ""
+
+msgid "Remove from favorites"
+msgstr ""
+
+msgid "Add to favorites"
+msgstr ""
+
+msgid "unknown"
+msgstr ""
+
+msgid "Any values"
+msgstr ""
+
+msgid "Further details"
+msgstr ""
+
+msgid "Continue browsing in this direction"
+msgstr ""
