--- a/locale/de_CH/madek.po
+++ b/locale/de_CH/madek.po
@@ -409,6 +409,9 @@ msgstr[1] "Dieser Eintrag ist in %d Sets enthalten"
 msgid "Responsibility"
 msgstr "Verantwortlichkeit"
 
+msgid "Move Responsibility"
+msgstr "Verantwortlichkeit übertragen"
+
 msgid "Person responsible in the system"
 msgstr "Verantwortliche Person im System"
 
@@ -653,6 +656,9 @@ msgid "Show permissions"
 msgstr "Berechtigungen anzeigen"
 
 msgid "Edit permissions"
+msgstr "Berechtigungen editieren"
+
+msgid "Edit permissions"
 msgstr "Berechtigungen verwalten"
 
 msgid "Edit metadata of these media entries"
@@ -693,6 +699,9 @@ msgstr "Berechtigung entfernen"
 
 msgid "Public"
 msgstr "Öffentlichkeit"
+
+msgid "Internet"
+msgstr "Internet"
 
 msgid "Responsible person"
 msgstr "Verantwortliche Person"
