Integrated Piotr's color and contrast
Squashed commit of the following:

commit 938230f2850cdc71d2b6eeeeb656323406962458
Author: Piotr F <piotr@piotrf.pl>
Date:   Fri Nov 22 13:47:57 2013 +0100

    Add contrasted colour scheme and color variations.

    Conflicts:
    	app/assets/images/backgrounds/thumb-catalog-backg.png
    	app/assets/images/backgrounds/thumb-catalog-backg@2x.png
    	app/assets/stylesheets/_config.sass
    	app/assets/stylesheets/application.sass
    	app/assets/stylesheets/combos/_ui-clipboard.sass
    	app/assets/stylesheets/combos/_ui-featured-entries.sass
    	app/assets/stylesheets/combos/_ui-resources-common.sass
    	app/assets/stylesheets/combos/_ui-resources-grid.sass
    	app/assets/stylesheets/combos/_ui-resources-list.sass
    	app/assets/stylesheets/combos/_ui-resources-miniature.sass
    	app/assets/stylesheets/components/_ui-body-title.sass
    	app/assets/stylesheets/components/_ui-containers.sass
    	app/assets/stylesheets/components/_ui-tabs.sass
    	app/assets/stylesheets/components/_ui-thumb-catalog.sass
    	app/assets/stylesheets/components/_ui-thumb.sass
    	app/assets/stylesheets/general/_buttons.sass
    	app/views/application/header/_user.html.haml
    	app/views/layouts/styleguide.html.haml

--- a/locale/de_CH/madek.po
+++ b/locale/de_CH/madek.po
@@ -637,6 +637,9 @@ msgstr "Admin-Modus verlassen"
 msgid "Switch to admin mode"
 msgstr "In Admin-Modus wechseln"
 
+msgid "Enable High Contrast Mode"
+msgstr "Enable High Contrast Mode"
+
 msgid "Log out"
 msgstr "Abmelden"
 
