Integration of type and spacing feature
Squashed commit of the following:

commit f93a3109d002a1b81f4ed1bd084f350e279d818d
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Dec 6 11:24:49 2013 +0100

    Adjust text in manage permissions and remove superfluous whitespace

commit aef48e5e79ade764423b5d073efacbce2cf8f886
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Dec 6 10:45:16 2013 +0100

    Domina: using the priority setting in contexts

commit e6ef708fed0733f3865be081ffa2b74bcf1909b4
Author: Thomas Schank <DrTom@schank.ch>
Date:   Thu Dec 5 22:14:46 2013 +0100

    Updated personas db

commit 86c80d7761fe42380e2edb9a8baed93539c80558
Author: Thomas Schank <DrTom@schank.ch>
Date:   Thu Dec 5 22:05:05 2013 +0100

    Task fetch_personas will work over vpn

    and actually report something when it fails

commit 184d703dc615ee3e7ede6f149246eae683929536
Author: Piotr F <piotr@piotrf.pl>
Date:   Fri Dec 6 13:02:31 2013 +0100

    In sidebar: bring back arrows to indicate state of the filters on all levels.

commit 8da8f0cf01e658d1a78761052ac08e87bda13e13
Author: Piotr F <piotr@piotrf.pl>
Date:   Fri Dec 6 12:51:14 2013 +0100

    Add rewind icon to the filter reset link.

commit 128b7ff04f0dbbdd9320a305fa54f3acb82c6005
Author: Piotr F <piotr@piotrf.pl>
Date:   Fri Dec 6 12:49:23 2013 +0100

    Document rewind icon.

commit 6b7afa14e5ee771b2bf1e875a97bcd6046bd23ee
Author: Piotr F <piotr@piotrf.pl>
Date:   Fri Dec 6 10:26:30 2013 +0100

    Rename Filtereinstellungen to Filterset… (editieren). Add in dropdown separator.

commit d70aa1845a1f3f2857820433ef71ba743c1c8337
Author: Piotr F <piotr@piotrf.pl>
Date:   Thu Dec 5 17:41:57 2013 +0100

    Remove .weak class from modal close icons. Again.

commit 092c276be743b0c63e766a1b806037b845afb752
Author: Piotr F <piotr@piotrf.pl>
Date:   Thu Dec 5 17:38:34 2013 +0100

    Correct new filterset button on the search page.

commit c09585ceb6fe762050f9098a5043c13068a1b8b4
Author: Piotr F <piotr@piotrf.pl>
Date:   Wed De

--- a/locale/de_CH/madek.po
+++ b/locale/de_CH/madek.po
@@ -148,7 +148,7 @@ msgstr ""
 "Änderungen vorgenommen werden, bleiben die verschiedenen Werte erhalten."
 
 msgid "Change filter settings"
-msgstr "Filtereinstellungen ändern"
+msgstr "Filterset editieren"
 
 msgid "Change view"
 msgstr "Darstellung ändern"
@@ -652,7 +652,7 @@ msgid "Save display settings"
 msgstr "Darstellung festlegen"
 
 msgid "Save filter settings"
-msgstr "Filtereinstellungen speichern"
+msgstr "Filterset speichern"
 
 msgid "Save permissions and continue..."
 msgstr "Berechtigungen speichern und weiter..."
