--- a/app/views/api/show.html.mkd
+++ b/app/views/api/show.html.mkd
@@ -1,9 +1,9 @@
 Welcome to the Madek API
 ========================
 
-You requested the api with for viewable content for e.g. a browser. However,
-the api is meant to be used for requesting data with the content type
-`application/json` or `application/json+hal`. 
+You requested the api with for viewable content for e.g. a browser.
+However, this page api is meant to be used for requesting data with the content
+type `application/json+hal`.
 
 Consider to visit the [api documentation](/public/api_docs) or browse the API with the embedded [MAdeK API Browser](/api-browser/browser.html#/api/).
 
