ui: /my: list contexts similar to /explore, but only user's context (if any)
Squashed commit of the following:

commit f576421525ba3ccafbc6711cc282d614f4b3e065
Author: Max F. Albrecht <1@178.is>
Date:   Fri Apr 11 16:12:13 2014 +0200

    ui: /my: make /my/context more consistent (and translated)

    part of [#44584457]

commit dc9f8beb0de8d4ab7a4bff52e82052a5137572e3
Author: Max F. Albrecht <1@178.is>
Date:   Tue Apr 8 12:26:33 2014 +0200

    ui: /my: duplicate everything related to meta_contexts from /explore

    part of [#44584457]

--- a/locale/de_CH/madek.po
+++ b/locale/de_CH/madek.po
@@ -491,6 +491,9 @@ msgstr "Meine letzten Importe"
 msgid "My workgroups"
 msgstr "Meine Arbeitsgruppen"
 
+msgid "My contexts"
+msgstr "Meine Kontexte"
+
 msgid "Name"
 msgstr "Name"
 
