UI/UX: context => vocabulary revamp step 1/3
- rename all instances of '(meta_)context' to 'vocabulary'
- implement new unified design (combines context, vocabulary and abstract)

still missing:
- some counting queries
- optimize/consilidate existing queries
- fix tests
- polish (step 3)

--- a/locale/madek.pot
+++ b/locale/madek.pot
@@ -60,12 +60,6 @@ msgstr ""
 msgid "4. Organize media entries"
 msgstr ""
 
-msgid "A specific vocabulary was created for this context"
-msgstr ""
-
-msgid "A specific vocabulary was created for this set"
-msgstr ""
-
 msgid "Accept"
 msgstr ""
 
@@ -823,6 +817,9 @@ msgstr ""
 
 msgid "Vocabulary"
 msgstr ""
+
+msgid "Vocabularies"
+msgstr "Vokabulare"
 
 msgid "Welcome"
 msgstr ""
