Revert "UI/UX: context 1/3" since tests fail
This reverts commit f9cebb3c07f89a8e5f5880124b7e7493adc419bb.

--- a/locale/en_GB/madek.po
+++ b/locale/en_GB/madek.po
@@ -56,6 +56,12 @@ msgstr "3. Add metadata"
 msgid "4. Organize media entries"
 msgstr "4. Organize media entries"
 
+msgid "A specific vocabulary was created for this context"
+msgstr "A specific vocabulary was created for this context"
+
+msgid "A specific vocabulary was created for this set"
+msgstr "A specific vocabulary was created for this set"
+
 msgid "Accept"
 msgstr "Accept"
 
