--- a/locale/madek.pot
+++ b/locale/madek.pot
@@ -60,6 +60,12 @@ msgstr ""
 msgid "4. Organize media entries"
 msgstr ""
 
+msgid "A specific vocabulary was created for this context"
+msgstr ""
+
+msgid "A specific vocabulary was created for this set"
+msgstr ""
+
 msgid "Accept"
 msgstr ""
 
@@ -817,9 +823,6 @@ msgstr ""
 
 msgid "Vocabulary"
 msgstr ""
-
-msgid "Vocabularies"
-msgstr "Vokabulare"
 
 msgid "Welcome"
 msgstr ""
