ui: implement new 'tile' view
for
* .ui-resources-list (All listings, like MediaSet's content, Search, …)
* MediaSet > Featured Items

Merged all current specs from IXT, so subtle breakage might occur…

---

Squashed commit of the following:

commit e31e8206c519c86397cb5fd2fe3c1545fc8d51fb
Author: Max F. Albrecht <1@178.is>
Date:   Mon Sep 22 19:30:14 2014 +0300

    styleguide: Move 10.2 documentation from the Upcoming Spec to components and combos respectively

commit a655210afbe7f999f0145379d3605b5200bc6408
Author: Max F. Albrecht <1@178.is>
Date:   Mon Sep 22 19:17:20 2014 +0300

    styleguide: name upcoming specs

commit d9fb60c32f804c3b98322e9dc355ea7ca80ffc93
Author: Max F. Albrecht <1@178.is>
Date:   Fri Aug 15 18:01:02 2014 +0200

    add markup for tile view in set > featured items

commit 4148bfcd74c3a88247f4ef210d266750210b591d
Author: Max F. Albrecht <1@178.is>
Date:   Fri Aug 15 17:22:19 2014 +0200

    refactor partial 'privacy' (don't wrap in special class)

commit f8290981a40b313e161d427c9299cd2a6dcc620a
Author: Max F. Albrecht <1@178.is>
Date:   Fri Aug 15 15:51:49 2014 +0200

    styleguide: use new tiles markup in featured items

commit f669feccf1967d44ff7de605ea7a549625545e65
Author: Max F. Albrecht <1@178.is>
Date:   Mon Sep 22 19:04:08 2014 +0300

    fix the messed up z-indexes

    now the tile footer is not overlapping clipboard, menus, etc

commit 6f004f20b0c8cf2e75363c9e1a0752731aac38c0
Author: Max F. Albrecht <1@178.is>
Date:   Mon Sep 22 18:02:55 2014 +0300

    test: check for additional class when switching to 'tiles'

commit 2fda8d27c2e39ef18a028a182815d97b58ff8432
Author: Max F. Albrecht <1@178.is>
Date:   Mon Sep 22 18:00:20 2014 +0300

    test: fix typos

commit 5ff0d77104774392792c78c0efe6de37dd650f77
Author: Max F. Albrecht <1@178.is>
Date:   Mon Sep 22 17:20:58 2014 +0300

    make 'save layout' also work for tiles

    - fix button
    - add additional needed classes in haml (as in js)
    - allow the :layout in set model!



--- a/locale/de_CH/madek.po
+++ b/locale/de_CH/madek.po
@@ -755,6 +755,9 @@ msgstr "Systemgruppen"
 msgid "Edit group"
 msgstr "Editieren"
 
+msgid "Tile view"
+msgstr "Kachel-Ansicht"
+
 msgid "TMS XML document"
 msgstr "TMS XML-Dokument"
 
