ui: resources: actions bar: text fixes, switch delete button with organize
delivers [#84479234]

commit c0e14051e2e1ca6896542703e663be477c622da6
Author: Max F. Albrecht <1@178.is>
Date:   Sat Jan 31 20:53:40 2015 +0100

    zu Set hinzufügen dafür aus dem Menü rausnehmen

commit 8319b07f2f4387937f2533038a961dd98c5e98ee
Author: Max F. Albrecht <1@178.is>
Date:   Sat Jan 31 20:34:43 2015 +0100

    löschen wieder ins Menü. nach unten unter Strich

commit c498058fc72e6fd3ed31dc9d54767a167cdb4900
Author: Max F. Albrecht <1@178.is>
Date:   Sat Jan 31 20:28:40 2015 +0100

    Titelbild setzen

commit 2a6b2fca3a8901e04540a37e1800b74fe830cea1
Author: Max F. Albrecht <1@178.is>
Date:   Sat Jan 31 20:26:33 2015 +0100

    "Adressen anzeigen"

--- a/locale/de_CH/madek.po
+++ b/locale/de_CH/madek.po
@@ -186,8 +186,8 @@ msgstr "Konvertierung fehlgeschlagen."
 msgid "Conversion is %f%% complete"
 msgstr "Konvertierung zu %f%% abgeschlossen"
 
-msgid "Cover image"
-msgstr "Titelbild"
+msgid "Set Cover image"
+msgstr "Titelbild setzen"
 
 msgid "Create filter set"
 msgstr "Filterset erstellen"
