MediaEntry-MetaData edit form
- completely built with React (js templates)
- renders static HTML as fallback
- uses default browser form-submit
- prog. enhanced InputMetaDatum, People multi-select
- working client-side models for MediaEntry + -MetaData implemented but not used yet

[finishes #101124810]

--- a/locale/de.yml
+++ b/locale/de.yml
@@ -20,6 +20,9 @@ de:
       destroy:
         success: '%{resource_name} wurde gelöscht.'
         error: '%{resource_name} konnte nicht gelöscht werden.'
+      meta_data_update:
+        success: 'Metadaten von %{resource_name} wurden gespeichert.'
+        error: 'Metadaten von %{resource_name} konnten nicht gespeichert werden.'
 
   # # General Madek
   sitemap_admin: "Admin"
