controller: meta_data_update: update OR create
Squashed commit of the following:
commit 3439a882641ff2f112cca7a12997e269b049cdb7
Author: Matus Kmit <matus.kmit@zhdk.ch>
Date:   Sat Oct 10 12:11:01 2015 +0200

    fix spec & MetaDatum#create_with_user!

commit b0f12cb25e981765c7def24710fc1fa49f903bdb
Author: Max F. Albrecht <1@178.is>
Date:   Fri Oct 9 11:30:51 2015 +0200

    controller: meta_data_update: update OR create

--- a/locale/de.yml
+++ b/locale/de.yml
@@ -1,10 +1,14 @@
 de:
   # # Rails
   activerecord:
+    attributes:
+      meta_datum/keywords:
+        created_by: 'Ersteller'
     errors:
       messages:
         record_invalid: 'Überprüfung fehlgeschlagen: %{errors}'
         taken: "ist bereits vergeben"
+        blank: "ist leer"
   flash:
     actions:
       create:
